--- a/cmp-linted/function.tmpl
+++ b/cmp-linted/function.tmpl
@@ -78,11 +78,9 @@ func {{.TestName}}(t *testing.T) {
 				{{- else if .IsBasicType}}
 					if {{if $f.OnlyReturnsOneValue}}{{Got .}} := {{template "inline" $f}}; {{end}} {{Got .}} != testCase.{{Want .}} {
 				{{- else}}
-					if {{if $f.OnlyReturnsOneValue}}{{Got .}} := {{template "inline" $f}}; {{end}} !cmp.Equal({{Got .}}, testCase.{{Want .}}) {
+					if {{if $f.OnlyReturnsOneValue}}{{Got .}} := {{template "inline" $f}}; {{end}} diff := cmp.Diff({{Got .}}, testCase.{{Want .}}); diff != "" {
 				{{- end}}
-				t.Errorf("{{template "message" $f}} {{if $f.ReturnsMultiple}}{{Got .}} {{end}}= %v, want %v{{ if (not ( or .IsWriter .IsBasicType))}}\ndiff=%s{{ end }}", {{template "inputs" $f}} {{Got .}}, testCase.{{Want .}}
-				    {{- if (not ( or .IsWriter .IsBasicType))}},
-						cmp.Diff({{Got .}}, testCase.{{Want .}}){{ end }})
+				t.Errorf("{{template "message" $f}} {{if $f.ReturnsMultiple}}{{Got .}}{{end}}diff (-got +want)\n%s", diff)
 				}
 			{{- end}}
 		{{- if .Subtests }} }) {{- end -}}
